--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="中国, 省份, 城市, 行政区, 省市区, 三级联动, 地址选择器, HTML, CSS, JS, JavaScript, jQuery plugin, province, city, district, pick, picker, picking, front-end, frontend, web development">
   <meta name="author" content="Fengyuan Chen">
   <title>Distpicker</title>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -32,9 +32,10 @@
       </div>
       <nav class="collapse navbar-collapse" id="navbar-collapse-1" role="navigation">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="http://github.com/fengyuanchen/distpicker/blob/master/README.md">Docs</a></li>
-          <li><a href="http://github.com/fengyuanchen/distpicker">Github</a></li>
+          <li><a href="https://github.com/fengyuanchen/distpicker/tree/v1.0.1//README.md">Docs</a></li>
+          <li><a href="https://github.com/fengyuanchen/distpicker">Github</a></li>
           <li><a href="http://chenfengyuan.com">About</a></li>
+          <li><a href="http://fengyuanchen.github.io">More</a></li>
         </ul>
       </nav>
     </div>
@@ -43,8 +44,13 @@
   <!-- Jumbotron -->
   <div class="jumbotron docs-jumbotron">
     <div class="container">
-      <h1>Distpicker <small class="version">v1.0.0</small></h1>
+      <h1>Distpicker <small class="version">v1.0.1</small></h1>
       <p class="lead">A simple jQuery plugin for picking provinces, cities and districts of China.</p>
+      <div class="docs-carbonads-container">
+        <div class="docs-carbonads">
+          <script type="text/javascript" id="_carbonads_js" src="//cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=fengyuanchen" async></script>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -377,8 +383,9 @@
 
   <!-- Scripts -->
   <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
+  <script src="http://fengyuanchen.github.io/js/main.js"></script>
   <script src="js/distpicker.data.js"></script>
   <script src="js/distpicker.js"></script>
   <script src="js/main.js"></script>
