--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <p class="lead">A simple jQuery plugin for picking provinces, cities and districts of China.</p>
       <div class="docs-carbonads-container">
         <div class="docs-carbonads">
-          <!-- <script id="_carbonads_js" src="//cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=fengyuanchen" async></script> -->
+          <script id="_carbonads_js" src="//cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=fengyuanchen" async></script>
         </div>
       </div>
     </div>
